k8s/inventree/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree-worker
  namespace: productivity
spec:
  selector:
    matchLabels:
      app: inventree-worker
  template:
    metadata:
      labels:
        app: inventree-worker
    spec:
      volumes:
        - name: inventree
          persistentVolumeClaim:
            claimName: inventree-pvc
      containers:
        - name: inventree-worker
          image: inventree/inventree:stable
          command: ["invoke", "worker"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: inventree
              mountPath: /home/inventree/data
