k8s/inventree/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventree-proxy
  namespace: productivity
spec:
  selector:
    app: inventree-proxy
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
