k8s/inventree/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventree-server
  namespace: productivity
spec:
  selector:
    app: inventree-server
  ports:
    - port: 80
      targetPort: 8000
      name: http
      protocol: TCP
