k8s/inventree/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventree
  namespace: productivity
  labels:
    name: inventree
spec:
  rules:
    - host: parts.zefirsroyal.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: inventree-proxy
                port:
                  number: 80
